<resources>
    <string name="app_name">KlimaApp</string>
    <string name="username">Kullanıcı adı</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="not_registered">Kayıt Olmadınız mı?</string>
    <string name="register">KAYIT OL</string>
    <string name="email">E-Posta</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
