<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/newbackground"
    >
    <EditText
        android:id="@+id/editText_username"
        android:layout_width="230dp"
        android:layout_height="49dp"
        android:layout_marginTop="190dp"
        android:drawableLeft="@drawable/icons_user"
        android:background="#ffffff"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editText_pw"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/icons_password"
        android:background="#ffffff"
        android:hint="@string/password" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/login" />
    <TextView
        android:id="@+id/textView_notRegistered"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="@string/not_registered"
        />
    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="-13dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="20dp"


        />


</LinearLayout>